Added spans for all the keys and positioned them accordingly. Made the spans for the black keys white to be able to see them

--- a/index.html
+++ b/index.html
@@ -12,31 +12,31 @@
     <div class="container">
         <div class="keyBoardLayout">
             <div class="keyContainer">
-                <div class="key key-c"></div>
-                <div class="key key-d"></div>
-                <div class="key key-e"></div>
-                <div class="key key-f"></div>
-                <div class="key key-g"></div>
-                <div class="key key-a"></div>
-                <div class="key key-b"></div>
-                <div class="key key-c-2"></div>
-                <div class="key key-d-2"></div>
-                <div class="key key-e-2"></div>
-                <div class="key key-f-2"></div>
-                <div class="key key-g-2"></div>
-                <div class="key key-a-2"></div>
-                <div class="key key-b-2"></div>
-                <div class="key key-c-3"></div>
-                <div class="key blackKey CSharp"></div>
-                <div class="key blackKey DSharp"></div>
-                <div class="key blackKey FSharp"></div>
-                <div class="key blackKey GSharp"></div>
-                <div class="key blackKey ASharp"></div>
-                <div class="key blackKey CSharp-2"></div>
-                <div class="key blackKey DSharp-2"></div>
-                <div class="key blackKey FSharp-2"></div>
-                <div class="key blackKey GSharp-2"></div>
-                <div class="key blackKey ASharp-2"></div>
+                <div class="key key-c"><span>T<br>A<br>B</span></div>
+                <div class="key key-d"><span>Q</span></div>
+                <div class="key key-e"><span>W</span></div>
+                <div class="key key-f"><span>E</span></div>
+                <div class="key key-g"><span>R</span></div>
+                <div class="key key-a"><span>T</span></div>
+                <div class="key key-b"><span>Y</span></div>
+                <div class="key key-c-2"><span>U</span></div>
+                <div class="key key-d-2"><span>I</span></div>
+                <div class="key key-e-2"><span>O</span></div>
+                <div class="key key-f-2"><span>P</span></div>
+                <div class="key key-g-2"><span>[</span></div>
+                <div class="key key-a-2"><span>]</span></div>
+                <div class="key key-b-2"><span>\</span></div>
+                <div class="key key-c-3"><span>E<br>n<br>t<br>e<br>r</span></div>
+                <div class="key blackKey CSharp"><span>`</span></div>
+                <div class="key blackKey DSharp"><span>1</span></div>
+                <div class="key blackKey FSharp"><span>2</span></div>
+                <div class="key blackKey GSharp"><span>3</span></div>
+                <div class="key blackKey ASharp"><span>4</span></div>
+                <div class="key blackKey CSharp-2"><span>5</span></div>
+                <div class="key blackKey DSharp-2"><span>6</span></div>
+                <div class="key blackKey FSharp-2"><span>7</span></div>
+                <div class="key blackKey GSharp-2"><span>8</span></div>
+                <div class="key blackKey ASharp-2"><span>9</span></div>
             </div>
         </div>
     </div>
