added sounds files to sound folder as well as fix audio src issue claiming the files were not found. Added the JS

--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
                 <div data-key="160" class="key key-g-2"><span>[</span></div>
                 <div data-key="221" class="key key-a-2"><span>]</span></div>
                 <div data-key="220" class="key key-b-2"><span>\</span></div>
-                <div data-key="13" class="key key-c-3"><span>E<br>n<br>t<br>e<br>r</span></div>
                 <div data-key="192" class="key blackKey CSharp"><span>`</span></div>
                 <div data-key="49" class="key blackKey DSharp"><span>1</span></div>
                 <div data-key="50" class="key blackKey FSharp"><span>2</span></div>
@@ -40,6 +39,32 @@
             </div>
         </div>
     </div>
+
+    <audio data-key="9" src="../25KeyPiano/SOUNDS/key01.mp3"></audio>
+    <audio data-key="81" src="../25KeyPiano/SOUNDS/key02.mp3"></audio>
+    <audio data-key="87" src="../25KeyPiano/SOUNDS/key03.mp3"></audio>
+    <audio data-key="69" src="../25KeyPiano/SOUNDS/key04.mp3"></audio>
+    <audio data-key="82" src="../25KeyPiano/SOUNDS/key05.mp3"></audio>
+    <audio data-key="84" src="../25KeyPiano/SOUNDS/key06.mp3"></audio>
+    <audio data-key="89" src="../25KeyPiano/SOUNDS/key07.mp3"></audio>
+    <audio data-key="85" src="../25KeyPiano/SOUNDS/key08.mp3"></audio>
+    <audio data-key="73" src="../25KeyPiano/SOUNDS/key09.mp3"></audio>
+    <audio data-key="79" src="../25KeyPiano/SOUNDS/key10.mp3"></audio>
+    <audio data-key="80" src="../25KeyPiano/SOUNDS/key11.mp3"></audio>
+    <audio data-key="160" src="../25KeyPiano/SOUNDS/key12.mp3"></audio>
+    <audio data-key="221" src="../25KeyPiano/SOUNDS/key13.mp3"></audio>
+    <audio data-key="220" src="../25KeyPiano/SOUNDS/key14.mp3"></audio>
+    <audio data-key="192" src="../25KeyPiano/SOUNDS/key15.mp3"></audio>
+    <audio data-key="49" src="../25KeyPiano/SOUNDS/key16.mp3"></audio>
+    <audio data-key="50" src="../25KeyPiano/SOUNDS/key17.mp3"></audio>
+    <audio data-key="51" src="../25KeyPiano/SOUNDS/key18.mp3"></audio>
+    <audio data-key="52" src="../25KeyPiano/SOUNDS/key19.mp3"></audio>
+    <audio data-key="53" src="../25KeyPiano/SOUNDS/key20.mp3"></audio>
+    <audio data-key="54" src="../25KeyPiano/SOUNDS/key21.mp3"></audio>
+    <audio data-key="55" src="../25KeyPiano/SOUNDS/key22.mp3"></audio>
+    <audio data-key="56" src="../25KeyPiano/SOUNDS/key23.mp3"></audio>
+    <audio data-key="57" src="../25KeyPiano/SOUNDS/key24.mp3"></audio>
+
     <script src="../25KeyPiano/index.js"></script>
 </body>
 </html>
