--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>25 Key Piano</title>
     <link rel="stylesheet" href="../25KeyPiano/reset.css">
     <link rel="stylesheet" href="../25KeyPiano/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lobster+Two&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
