--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 <body>
     <div class="container">
         <div class="keyBoardLayout">
+            <div class="nameLayout">
+            <span class="name">Nektar</span>
+            <span class="model">SE</span><span class="modelNumber">25</span>
+            </div>
             <div class="keyContainer">
                 <div data-key="9" class="key key-c"><span>T<br>A<br>B</span></div>
                 <div data-key="81" class="key key-d"><span>Q</span></div>
