added red and green cirles

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
             <span class="name">Nektar</span>
             <span class="model">SE</span><span class="modelNumber">25</span>
             </div>
+            <div class="circles">
+                <div class="green"></div>
+                <div class="red"></div>
             <div class="keyContainer">
                 <div data-key="9" class="key key-c"><span>T<br>A<br>B</span></div>
                 <div data-key="81" class="key key-d"><span>Q</span></div>
