added green and pink circles and removed the test for fixing spacing on iphone xr. On other phones seems to work correct. In web dev works correct. On my Iphone XR 5 and 6 are off

--- a/index.html
+++ b/index.html
@@ -10,14 +10,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lobster+Two&display=swap" rel="stylesheet">
-<style type="text/css"> /* some comments */ .somestyle { display: none; } </style>
 </head>
 <body>
     <div class="container">
         <div class="keyBoardLayout">
             <div class="nameLayout">
-            <span class="name">Nektar</span>
-            <span class="model">SE</span><span class="modelNumber">25</span>
+                <span class="name">Nektar</span>
+                <span class="model">SE</span><span class="modelNumber">25</span>
+                    <div class="circle-container">
+                        <div class="circle-green"></div>
+                        <div class="circle-pink"></div>
+                    </div>
             </div>
             <div class="keyContainer">
                 <div data-key="9" class="key key-c"><span>T<br>A<br>B</span></div>
