added a folder for pictures and messed around with location of text circles and images

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lobster+Two&display=swap" rel="stylesheet">
+<script src="https://kit.fontawesome.com/13ba0abfad.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container">
@@ -21,6 +22,12 @@
                         <div class="circle-green"></div>
                         <div class="circle-pink"></div>
                     </div>
+                    <div class="circle-text">
+                        <span>Oct-</span>
+                        <span>Oct+</span>
+                    </div>
+                        <img src="..//25KeyPiano/pics/play-solid.svg" alt="play" class="img-play">
+                        
             </div>
             <div class="keyContainer">
                 <div data-key="9" class="key key-c"><span>T<br>A<br>B</span></div>
