added pictures for play and stop. Did position and sizing for play and stop

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                         <span>Oct-</span>
                         <span>Oct+</span>
                     </div>
-                        <img src="..//25KeyPiano/pics/play-solid.svg" alt="play" class="img-play">
-                        
+                        <img src="..//25KeyPiano/pics/play-solid.png" alt="play" class="img-play">
+                        <img src="..//25KeyPiano/pics/stop-solid.png" alt="stop" class="img-stop">
             </div>
             <div class="keyContainer">
                 <div data-key="9" class="key key-c"><span>T<br>A<br>B</span></div>
