--- a/index.html
+++ b/index.html
@@ -27,8 +27,12 @@
                         <span>Oct+</span>
                     </div>
                         <img src="..//25KeyPiano/pics/play-solid.png" alt="play" class="img-play">
+                        <span class="pb1">PB1</span>
                         <img src="..//25KeyPiano/pics/stop-solid.png" alt="stop" class="img-stop">
-            </div>
+                        <span class="pb2">PB2</span>
+                        <img src="..//25KeyPiano/pics/backward-solid.png" alt="backward" class="img-backward">
+                        <img src="..//25KeyPiano/pics/forward-solid.png" alt="forward" class="img-forward">
+                    </div>
             <div class="keyContainer">
                 <div data-key="9" class="key key-c"><span>T<br>A<br>B</span></div>
                 <div data-key="81" class="key key-d"><span>Q</span></div>
