--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
                         <img src="..//25KeyPiano/pics/backward-solid.png" alt="backward" class="img-backward">
                         <img src="..//25KeyPiano/pics/forward-solid.png" alt="forward" class="img-forward">
                     </div>
+                    <div class="setupBtns">
+                        <button>S</button>
+                        <button>2</button>
+                    </div>
             <div class="keyContainer">
                 <div data-key="9" class="key key-c"><span>T<br>A<br>B</span></div>
                 <div data-key="81" class="key key-d"><span>Q</span></div>
