create setup text and white line above it

--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
                         <button>S</button>
                         <button>2</button>
                     </div>
+                    <div class="setupTxt">
+                        <span class="txtColor">Setup</span>
+                    </div>
+                    <div class="leftLine"></div>
+                    <div class="rightLine"></div>
             <div class="keyContainer">
                 <div data-key="9" class="key key-c"><span>T<br>A<br>B</span></div>
                 <div data-key="81" class="key key-d"><span>Q</span></div>
