--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                     </div>
                     <div class="leftLine"></div>
                     <div class="rightLine"></div>
+                    <div class="returnDefault"><span class="txtLabel">Return to Default</span></div>
             <div class="keyContainer">
                 <div data-key="9" class="key key-c"><span>T<br>A<br>B</span></div>
                 <div data-key="81" class="key key-d"><span>Q</span></div>
