Added other txtLabels

--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
                     <div class="leftLine"></div>
                     <div class="rightLine"></div>
                     <div class="returnDefault"><span class="txtLabel">Return to Default</span></div>
+                    <div class="velocityCurve"><span class="txtLabel">0/- Velocity Curve</span></div>
+                    <div class="globalChannel"><span class="txtLabel">Global Channel</span></div>
+                    <div class="program"><span class="txtLabel">Program</span></div>
+                    <div class="recall"><span class="txtLabel">Recall</span></div>
+                    <div class="store"><span class="txtLabel">Store</span></div>
             <div class="keyContainer">
                 <div data-key="9" class="key key-c"><span>T<br>A<br>B</span></div>
                 <div data-key="81" class="key key-d"><span>Q</span></div>
